Finished landing page basic structure and design

--- a/index.html
+++ b/index.html
@@ -9,7 +9,43 @@
 </head>
 
 <body>
+    <header >
+        <nav class="header">
+            <img class="logo" src="Assets/logo.png" alt="">
+            <div class="headerlinks">
+            <a href="">About</a>
+            <a href="">Portfolio</a>
+            <a href="">Contact</a>
+            </div>
+        </nav>
+    </header>
+
+    <div class="hero">
+        <div class="hero-text">
+        <H1>Hi,I'm noah</H1>
+        <p>Just a normal web developer with ambition and a dream</p>
+        </div>
+        <div class="hero-image">
+        <img src="Assets/alter-ego.png" alt="">
+        </div>
+    </div>
+
+    <div class="my-services">
+        <h2>How can I help you today?</h2>
+        <ul class="services-list">
+            <li class="item"><img class="item-image" src="Assets/design.png" alt=""><p class="item-heading">Design</p></li>
+
+            <li class="item"><img class="item-image" src="Assets/coding.png" alt=""><p class="item-heading">Animations</p></li>
     
+            <li class="item"><img class="item-image" src="Assets/custom.png" alt=""><p class="item-heading">Custom Features</p></li>
+            
+            <li class="item" ><img class="item-image" src="Assets/maintenance.png" alt=""><p class="item-heading">Maintenance</p></li>
+        </ul>
+    </div>
+
+    <footer>
+        <div>Bye for now</div>
+    </footer>
 </body>
 
 </html>
