Finished Landing Page

--- a/index.html
+++ b/index.html
@@ -9,39 +9,57 @@
 </head>
 
 <body>
-    <header >
+
         <nav class="header">
+            <a class="logoWrapper" href="index.html">
             <img class="logo" src="Assets/logo.png" alt="">
+            </a>
             <div class="headerlinks">
             <a href="">About</a>
             <a href="">Portfolio</a>
             <a href="">Contact</a>
             </div>
         </nav>
-    </header>
+   
 
-    <div class="hero">
-        <div class="hero-text">
-        <H1>Hi,I'm noah</H1>
-        <p>Just a normal web developer with ambition and a dream</p>
+    <section id="Hero">
+        <div class="heroContent">
+            <div class="hero-text">
+            <H1>Hi,I'm noah</H1>
+            <p>Just a normal web developer with ambition and a dream</p>
+            </div>
+            <div class="hero-image">
+            <img src="Assets/alter-ego.png" alt="">
+            </div>
         </div>
-        <div class="hero-image">
-        <img src="Assets/alter-ego.png" alt="">
-        </div>
-    </div>
+    </section>
 
-    <div class="my-services">
+    <section id="my-services">
         <h2>How can I help you today?</h2>
         <ul class="services-list">
-            <li class="item"><img class="item-image" src="Assets/design.png" alt=""><p class="item-heading">Design</p></li>
+            <li class="item"><script src="https://unpkg.com/@lottiefiles/dotlottie-wc@0.6.2/dist/dotlottie-wc.js" type="module"></script>
+                <dotlottie-wc src="https://lottie.host/af5159ab-ad0d-4d99-a2a5-167e2fa37d08/nlGmqMzlpN.lottie" style="width: 300px;height: 300px" speed="1" autoplay loop></dotlottie-wc><p class="item-heading">UI/UX Design</p></li>
 
-            <li class="item"><img class="item-image" src="Assets/coding.png" alt=""><p class="item-heading">Animations</p></li>
+            <li class="item"><script src="https://unpkg.com/@lottiefiles/dotlottie-wc@0.6.2/dist/dotlottie-wc.js" type="module"></script>
+                <dotlottie-wc src="https://lottie.host/6484a8ff-e464-46a9-8b02-24dc8b7f5550/9zPIIFeq0u.lottie" style="width: 300px;height: 300px" speed="1" autoplay loop></dotlottie-wc><p class="item-heading">Web Experiences</p></li>
     
-            <li class="item"><img class="item-image" src="Assets/custom.png" alt=""><p class="item-heading">Custom Features</p></li>
+            <li class="item"><script src="https://unpkg.com/@lottiefiles/dotlottie-wc@0.6.2/dist/dotlottie-wc.js" type="module"></script>
+                <dotlottie-wc src="https://lottie.host/1b495644-ecb1-4fe4-a6a9-fdb942f1bcb0/T3IHKyXXZj.lottie" style="width: 300px;height: 300px" speed="1" autoplay loop></dotlottie-wc><p class="item-heading">Custom Features</p></li>
             
-            <li class="item" ><img class="item-image" src="Assets/maintenance.png" alt=""><p class="item-heading">Maintenance</p></li>
+            <li class="item" ><script src="https://unpkg.com/@lottiefiles/dotlottie-wc@0.6.2/dist/dotlottie-wc.js" type="module"></script>
+                <dotlottie-wc src="https://lottie.host/10b40815-58d0-4868-b14c-33e32bdba0d2/PaTgg0wIQr.lottie" style="width: 300px;height: 300px" speed="1" autoplay loop></dotlottie-wc><p class="item-heading">Website Revamp</p></li>
         </ul>
-    </div>
+    </section>
+
+    <section id="Testimonials">
+        <h1>"The websites he creates strike a rare balance between design, interactivity, and functionality. Every detail feels intentional — from the smooth animations to the intuitive layouts. Their work doesn’t just look great, it feels great. It feels more like an experience than a website."</h1>
+        <h1>~Mom</h1>
+    </section>
+
+    <section id="CTA">
+        <h1>Get in touch</h1>
+        <div class="ctaButton">Hire Me</div>
+    </section>
 
     <footer>
         <div>Bye for now</div>
